k3s/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "6600"
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: img-ingress
  namespace: img
spec:
  rules:
  - host: img.tino.sh
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: img-service
            port: 
              number: 8080
  tls:
  - hosts:
    - img.tino.sh
    secretName: img-tino-sh-tls
